Autogluon Project - Udacity

--- a/project/project-notebook.ipynb
+++ b/project/project-notebook.ipynb
@@ -697,8 +697,8 @@
    "source": [
     "# Fill in your user name and key from creating the kaggle account and API token file\n",
     "import json\n",
-    "kaggle_username = \"kkpdealwis\"\n",
-    "kaggle_key = \"ebbd1ebd896473f5a41249ad8c2b2766\"\n",
+    "kaggle_username = \"<--username-->\"\n",
+    "kaggle_key = \"<--keggle-key-->\"\n",
     "\n",
     "# Save API token the kaggle.json file\n",
     "with open(\"/root/.kaggle/kaggle.json\", \"w\") as f:\n",
